--- a/app/src/main/res/layout/overlay_list_item.xml
+++ b/app/src/main/res/layout/overlay_list_item.xml
@@ -5,11 +5,15 @@
 
     <TextView
         android:id="@+id/overlayItemLabel"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content" />
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="monospace"
+        android:textSize="10sp" />
 
     <TextView
         android:id="@+id/overlayItemValue"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:fontFamily="monospace"
+        android:textSize="10sp" />
 </LinearLayout>
