Add license notice

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,15 @@
         android:text="@string/stop_service"
         app:layout_constraintStart_toEndOf="@+id/mainButtonStartService"
         app:layout_constraintTop_toTopOf="@+id/mainButtonStartService" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="showLicenses"
+        android:text="@string/licenses"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mainButtonStartService" />
 </androidx.constraintlayout.widget.ConstraintLayout>
