--- a/app/src/main/res/xml/fragment_preferences.xml
+++ b/app/src/main/res/xml/fragment_preferences.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory app:title="Main">
         <CheckBoxPreference
@@ -13,14 +14,20 @@
             app:key="thermalMonitorUseRoot"
             app:title="Use root to access thermal zones" />
 
-        <EditTextPreference
+        <SeekBarPreference
+            android:defaultValue="1000"
+            android:max="5000"
             app:key="thermalMonitorRefreshInterval"
+            app:min="500"
             app:title="Refresh interval (in ms)" />
     </PreferenceCategory>
 
     <PreferenceCategory app:title="CPU Frequency Monitor">
-        <EditTextPreference
+        <SeekBarPreference
+            android:defaultValue="1000"
+            android:max="5000"
             app:key="cpuFreqMonitorRefreshInterval"
+            app:min="500"
             app:title="Refresh interval (in ms)" />
     </PreferenceCategory>
 
