--- a/app/src/main/res/layout/overlay.xml
+++ b/app/src/main/res/layout/overlay.xml
@@ -1,7 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/overlayRecyclerView">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-</androidx.recyclerview.widget.RecyclerView>
+    <data>
+
+        <variable
+            name="config"
+            type="com.gitlab.saschabrunner.thermalmonitor.main.monitor.overlay.OverlayConfig" />
+    </data>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/overlayRecyclerView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="@{config.gravity}"
+            android:background="@{config.backgroundColor}" />
+
+    </FrameLayout>
+
+</layout>
+
+
