--- a/app/src/main/res/layout/overlay_list_item.xml
+++ b/app/src/main/res/layout/overlay_list_item.xml
@@ -1,19 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/overlayItemLabel"
-        android:layout_width="110dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="monospace"
-        android:textSize="10sp" />
+    <data>
 
-    <TextView
-        android:id="@+id/overlayItemValue"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="monospace"
-        android:textSize="10sp" />
-</LinearLayout>
+        <variable
+            name="config"
+            type="com.gitlab.saschabrunner.thermalmonitor.main.monitor.overlay.OverlayConfig" />
+    </data>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/overlayItemLabel"
+            android:layout_width="@{config.labelWidth, default=wrap_content}"
+            android:layout_height="wrap_content"
+            android:fontFamily="monospace"
+            android:textColor="@{config.textColor}"
+            android:textSize="@{config.textSize}"
+            android:visibility="@{config.labelVisibility}" />
+
+        <TextView
+            android:id="@+id/overlayItemValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="monospace"
+            android:textColor="@{config.textColor}"
+            android:textSize="@{config.textSize}" />
+
+    </LinearLayout>
+
+</layout>
+
