--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,16 +42,17 @@
     <Button
         android:id="@+id/homeButtonToggleService"
         style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="347dp"
+        android:layout_width="0dp"
         android:layout_height="100dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:onClick="toggleService"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeRunningStatus" />
+        app:layout_constraintTop_toBottomOf="@+id/homeRunningStatus"
+        app:layout_constraintWidth_max="350dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
