Add default values to preference XMLs

--- a/app/src/main/res/xml/fragment_settings.xml
+++ b/app/src/main/res/xml/fragment_settings.xml
@@ -3,6 +3,7 @@
 
     <PreferenceCategory app:title="Global">
         <CheckBoxPreference
+            app:defaultValue="false"
             app:key="rootEnabled"
             app:title="Enable root functions" />
         <Preference
