--- a/app/src/main/res/xml/fragment_settings_thermal_monitor.xml
+++ b/app/src/main/res/xml/fragment_settings_thermal_monitor.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory app:title="Thermal Monitor">
         <CheckBoxPreference
@@ -18,9 +19,12 @@
             app:key="thermalMonitorThermalZones"
             app:title="Select thermal zones to monitor" />
 
-        <EditTextPreference
+        <com.gitlab.saschabrunner.thermalmonitor.main.ui.CustomSeekBarPreference
+            android:max="9990"
             app:defaultValue="1000"
             app:key="thermalMonitorRefreshInterval"
+            app:min="500"
+            app:stepWidth="100"
             app:title="Refresh interval (in ms)" />
     </PreferenceCategory>
 
