Start implementation of Thermal Zone Picker

--- a/app/src/main/res/xml/fragment_settings_thermal_monitor.xml
+++ b/app/src/main/res/xml/fragment_settings_thermal_monitor.xml
@@ -13,7 +13,7 @@
             app:key="thermalMonitorUseRoot"
             app:title="Use root to access thermal zones" />
 
-        <MultiSelectListPreference
+        <com.gitlab.saschabrunner.thermalmonitor.thermal.ThermalZonePickerPreference
             app:entries="@array/emptyStringArray"
             app:entryValues="@array/emptyStringArray"
             app:key="thermalMonitorThermalZones"
