--- a/app/src/main/res/layout/dialog_thermal_zone_picker.xml
+++ b/app/src/main/res/layout/dialog_thermal_zone_picker.xml
@@ -3,14 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--<androidx.recyclerview.widget.RecyclerView-->
-    <!--android:id="@+id/dialogThermalZonePickerRecyclerView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent" />-->
-
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dialogThermalZonePickerRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="TODO" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
