--- a/app/src/main/res/layout/dialog_thermal_zone_picker_list_item.xml
+++ b/app/src/main/res/layout/dialog_thermal_zone_picker_list_item.xml
@@ -9,7 +9,17 @@
     android:minHeight="200dp">
 
     <TextView
+        android:id="@+id/dialogThermalZonePickerId"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TODO" />
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/dialogThermalZonePickerTemperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/dialogThermalZonePickerType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </com.google.android.material.card.MaterialCardView>
