--- a/app/src/main/res/layout/dialog_thermal_zone_picker.xml
+++ b/app/src/main/res/layout/dialog_thermal_zone_picker.xml
@@ -8,4 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <ProgressBar
+        android:id="@+id/dialogThermalZonePickerProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical" />
+
 </FrameLayout>
