--- a/app/src/main/res/layout/dialog_thermal_zone_picker.xml
+++ b/app/src/main/res/layout/dialog_thermal_zone_picker.xml
@@ -9,6 +9,7 @@
         android:layout_height="match_parent" />
 
     <ProgressBar
+        android:layout_margin="100dp"
         android:id="@+id/dialogThermalZonePickerProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
